Fix align position

--- a/style.scss
+++ b/style.scss
@@ -13,6 +13,7 @@ body {
 .game-element-bt,
 .css-playerPickElement {
   margin-top: $marginTop;
+  text-align: center;
 }
 
 .out {
